--- a/.travis.yml
+++ b/.travis.yml
@@ -21,14 +21,14 @@ after_success:
   - docker push marty331moz/multi-server
   - docker push marty331moz/multi-worker
 
-deploy:
-  provider: elasticbeanstalk
-  region: 'us-west-2'
-  app: 'multi-docker'
-  env: 'MultiDocker-env'
-  bucket_name: 'elasticbeanstalk-us-west-2-036574284819'
-  bucket_path: 'docker-multi'
-  on:
-    branch: main
-  access_key_id: $AWS_ACCESS_KEY
-  secret_access_key: $AWS_SECRET_KEY
+# deploy:
+#   provider: elasticbeanstalk
+#   region: 'us-west-2'
+#   app: 'multi-docker'
+#   env: 'MultiDocker-env'
+#   bucket_name: 'elasticbeanstalk-us-west-2-036574284819'
+#   bucket_path: 'docker-multi'
+#   on:
+#     branch: main
+#   access_key_id: $AWS_ACCESS_KEY
+#   secret_access_key: $AWS_SECRET_KEY
